- Bugfix: SimpleDockAction.KeyForwarder caused a memory leak by not removing its listeners properly
- Bugfix: CLocations returning null as root but have an ExtendedMode are (again) supported.
- Bugfix: When moving/dragging a Dockable from a SplitDockStation with size-locked Dockables, the locked Dockables got resized even if it was not necessary.
- Bugfix (by ilvisne, Beni): SimpleDockAction did not unregister itself completely, as a result there was a memory leak
- API: FlapDockStation supports factory for creating the window
- Bugfix: DockUI now stalls all events rather than setting the SingleParentRemover to null when updating the DockTheme of a station
- Bugfix: CLayoutChangeStrategy.replaceMultipleDockables could throw a NPE
- Bugfix: CDockable.getBaseLocation did return null when a location was actually available
- Bugfix (by Thomas): Glass Extension no longer throws Exception if width or height of tab is 0
- Bugfix (by Thomas): Cursor should no longer remain arrow when moved away from a divider of a SplitDockStation
- API: StackDockComponent now offers a method "createDefaultRepresentation". This allows code to be executed when clicking on, or dragging of, an empty space arounds tabs.
- API/Bugfix: Clicking on a child action of a DropDownMenu that is shown as submenu now changes the selection of the button as well
- Bugfix: solved an issue where buttons on a Eclipse-Tab could not be pressed it the tab was not selected.  
- Bugfix: Removing all items of a CombinedStackDockComponent left them invisible
- API: New SplitDockFullScreenProperty allows clients to point locations to the fullscreen dockable of a SplitDockStation
- API: CMaximizedLocation now extends AbstractStackholdingLocation
- API: New OrientationToRotationStrategy, allows clients to specify how to rotate text on a DockTitle