@@ -334,3 +334,4 @@
 - API: New SplitDockFullScreenProperty allows clients to point locations to the fullscreen dockable of a SplitDockStation
 - API: CMaximizedLocation now extends AbstractStackholdingLocation
 - API: New OrientationToRotationStrategy, allows clients to specify how to rotate text on a DockTitle
+- Bugfix: repaired an issue where buttons on a FlapDockStation where not shown due to a race condition. Also repaired an issue where the button had a false size due to a missing border.
